Increased body width by 2 pixels to prevent some bad-looking word wrapping.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 body, img {
-	max-width: 620px;
+	max-width: 622px;
 }
 
 b, strong {
